# comfyui_simpletools

./: README.md  __init__.py  google_translator.py  parameters.py  pyproject.toml  resolution_solver.py
resources/: googletranslator.json  resolutionsolver.json
